# gameboy_emulator

./: Cargo.toml
gameboy_core/: Cargo.toml
gameboy_core/src/: lib.rs
gameboy_core/src/emulator/: mod.rs
gameboy_core/src/serial/: mod.rs
gameboy_core/src/transfer/: mod.rs
gameboy_opengl/: Cargo.toml
gameboy_opengl/src/: cable_link.rs  lib.rs  link_cable.rs
