[package]
name = "gameboy_opengl"
version = "0.2.8"
authors = ["Ben Konz <benkonz@protonmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/benkonz/gameboy_emulator"
description = "Native Gameboy emulator written in Rust!"
edition = "2018"

[[bin]]
name = "gameboy_emulator"

[dependencies]
gameboy_core = { path = "../gameboy_core", version = "0.3.3" }
clap = "2.33"
directories = "2.0"
cmake = "0.1.50" # when no visual studios installed
raw_sync = "0.1.5"
shared_memory = "0.12.4"

[dependencies.sdl2]
version = "0.34.0"
features = ["bundled", "static-link"]
